--- a/MoEngage/app/src/main/res/layout/activity_home.xml
+++ b/MoEngage/app/src/main/res/layout/activity_home.xml
@@ -6,8 +6,19 @@
     android:orientation="vertical"
     tools:context=".activities.HomeScreenActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminateTint="@color/colorGrey"/>
+    </FrameLayout>
 </LinearLayout>
