--- a/MoEngage/app/src/main/res/layout/row_articles_recycler_item.xml
+++ b/MoEngage/app/src/main/res/layout/row_articles_recycler_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_article"
@@ -18,19 +18,20 @@
             <ImageView
                 android:id="@+id/iv_article_image"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:scaleType="fitXY" />
 
             <ImageView
                 android:id="@+id/iv_download_article"
                 android:layout_width="@dimen/dp_14"
                 android:layout_height="@dimen/dp_14"
                 android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true"
                 android:layout_marginEnd="@dimen/dp_10"
+                android:layout_marginRight="@dimen/dp_10"
                 android:layout_marginBottom="@dimen/dp_10"
-                android:src="@drawable/ic_download"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="@dimen/dp_10" />
+                android:src="@drawable/ic_download" />
 
         </RelativeLayout>
 
@@ -49,7 +50,6 @@
             android:id="@+id/tv_article_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Lloyd is Awesome, So Please click on this to read the next article...."
             android:textColor="@android:color/black"
             android:textStyle="bold" />
 
@@ -70,7 +70,6 @@
                 android:id="@+id/tv_author_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Lloyd Dcosta"
                 android:textColor="@color/colorGrey"
                 android:textStyle="bold" />
         </LinearLayout>
