Improved UI, used builder pattern, stored the entire server response into database

--- a/MoEngage/app/src/main/res/layout/activity_home.xml
+++ b/MoEngage/app/src/main/res/layout/activity_home.xml
@@ -13,6 +13,7 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
         app:theme="@style/ToolBarStyle"
+        app:popupTheme="@style/PopupMenuStyle"
         app:menu="@menu/toolbar_menu" />
 
     <RelativeLayout
