--- a/MoEngage/app/src/main/res/values/styles.xml
+++ b/MoEngage/app/src/main/res/values/styles.xml
@@ -10,10 +10,18 @@
 
     </style>
 
-    <style name="ToolBarStyle" parent="Theme.AppCompat">
+    <style name="ToolBarStyle" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="android:textColorPrimary">@android:color/white</item>
         <item name="android:textColorSecondary">@android:color/white</item>
-        <item name="actionMenuTextColor">@android:color/white</item>
+        <item name="android:horizontalDivider">@android:drawable/divider_horizontal_bright</item>
 
+    </style>
+
+    <style name="PopupMenuStyle" parent="Theme.AppCompat.Light">
+        <item name="android:background">@android:color/white</item>
+        <item name="android:itemBackground">@android:color/white</item>
+        <item name="actionMenuTextColor">@android:color/black</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:actionMenuTextColor">@android:color/black</item>
     </style>
 </resources>
