--- a/MoEngage/app/src/main/res/layout/activity_home.xml
+++ b/MoEngage/app/src/main/res/layout/activity_home.xml
@@ -12,9 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
-        app:theme="@style/ToolBarStyle"
+        app:menu="@menu/toolbar_menu"
         app:popupTheme="@style/PopupMenuStyle"
-        app:menu="@menu/toolbar_menu" />
+        app:theme="@style/ToolBarStyle" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -28,9 +28,9 @@
         <ProgressBar
             android:id="@+id/progressBar"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="25dp"
             android:layout_centerInParent="true"
-            android:indeterminateTint="@color/colorGrey"
+            android:indeterminateTint="@color/colorPrimaryDark"
             tools:targetApi="lollipop" />
 
         <LinearLayout
